--- a/OTManagement/app/src/main/AndroidManifest.xml
+++ b/OTManagement/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OTManagement">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyClKY5Vdeov1ZqyXsfNi07tucxsrGnd92w" />
+
         <activity android:name=".UserInfo" />
         <activity android:name=".WarehouseDetail" />
         <activity android:name=".CountriesByRegion" />
