--- a/OTManagement/app/build.gradle
+++ b/OTManagement/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     implementation "com.google.android.material:material:$material_version"
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation "androidx.recyclerview:recyclerview:1.2.0"
 }
