--- a/OTManagement/app/src/main/AndroidManifest.xml
+++ b/OTManagement/app/src/main/AndroidManifest.xml
@@ -25,14 +25,14 @@
         <activity android:name=".ItemByName" />
         <activity android:name=".ItemByCategory" />
         <activity android:name=".ProductInfo" />
-        <activity android:name=".Login">
+        <activity android:name=".Splash"
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Splash" />
+        <activity android:name=".Login"/>
         <activity android:name=".MainActivity" />
     </application>
 
